manifests/pritunl/vpn-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: pritunl-vpn-svc
  namespace: pritunl
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "external"
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: "ip"
    service.beta.kubernetes.io/aws-load-balancer-name: "vpn-nlb"
    service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"
    service.beta.kubernetes.io/aws-load-balancer-ip-address-type: ipv4
    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: UDP
spec:
  selector:
    app: pritunl
  ports:
  - protocol: UDP
    port: 1194
    targetPort: 1194
    name: vpn
  type: LoadBalancer
