manifests/pritunl/web-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: pritunl-web-svc
  namespace: pritunl
spec:
  selector:
    app: pritunl
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    name: http
  - protocol: TCP
    port: 443
    targetPort: 443
    name: https
  type: ClusterIP
