manifests/pritunl/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pritunl-ingress
  namespace: pritunl
  annotations:
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:XXXXXXX
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80},{"HTTPS": 443}]'
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/backend-protocol: HTTPS
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/group.name: "monitoring"
spec:
  ingressClassName: alb
  tls:
  - hosts:
    - vpn.example.com
  rules:
  - host: vpn.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pritunl-web-svc
            port:
              number: 443
